# cudamgr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  LICENSE  README.md  demo_cli.sh  deny.toml
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  TEST_WORKFLOW.md
.github/workflows/: ci.yml  release.yml
data/: compatibility.json
examples/: gpu_detection.rs
scripts/: check.ps1  check.sh
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  interactive.rs  mod.rs  output.rs  tests.rs
src/config/: env.rs  mod.rs  path.rs  shell.rs  symlink.rs  tests.rs  types.rs
src/install/: cleanup.rs  downloader.rs  installer.rs  mod.rs  redist.rs  validator.rs
src/system/: compatibility.rs  compiler.rs  cuda.rs  distro.rs  driver.rs  gpu.rs  mod.rs  platform_tests.rs  report.rs  security.rs  storage.rs  tests.rs  visual_studio.rs  wsl.rs
src/version/: mod.rs  registry.rs  resolver.rs  switcher.rs
tests/: cli_integration_test.rs  integration_test.rs
